# tech-challenge-churn-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: business_cost_analysis.md  deployment_architecture.md  eda_findings.md  ml_canvas.md  model_card.md  monitoring_plan.md  video_cola_gravacao.html  video_presentation.html  video_slides.html  video_star_script.md
models/: mlp_bundle.pt  preprocessor.joblib
notebooks/: 01_eda_baselines.ipynb  02_mlp_experiments.ipynb
reports/: baseline_cost_summary.json  baseline_results.json  baseline_results.md  eda_summary.json  eda_summary.md  mlp_history.json  mlp_results.json  mlp_results.md  model_comparison.json  model_comparison.md  threshold_analysis.json
src/tech_challenge/: __init__.py  config.py  logging_config.py
src/tech_challenge/api/: app.py  schemas.py  service.py
src/tech_challenge/data/: eda.py  io.py  schema.py
src/tech_challenge/features/: preprocessing.py
src/tech_challenge/models/: artifacts.py  cost.py  evaluate.py  metrics.py  mlp.py  train_baselines.py  train_mlp.py
src/tech_challenge/utils/: reproducibility.py
tests/: conftest.py  test_api.py  test_schema.py  test_smoke_train.py
