[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-challenge-churn"
version = "0.1.0"
description = "End-to-end churn prediction project with PyTorch, MLflow, and FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "joblib>=1.4,<2.0",
  "matplotlib>=3.9,<4.0",
  "mlflow>=2.17,<3.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "pandera[pandas]>=0.22,<1.0",
  "pydantic>=2.9,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "scikit-learn>=1.5,<2.0",
  "seaborn>=0.13,<1.0",
  "torch>=2.4,<3.0",
  "uvicorn[standard]>=0.31,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "ipykernel>=6.29,<7.0",
  "jupyter>=1.1,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.7,<1.0",
]

[project.scripts]
run-eda = "tech_challenge.data.eda:main"
train-baselines = "tech_challenge.models.train_baselines:main"
train-mlp = "tech_challenge.models.train_mlp:main"
evaluate-models = "tech_challenge.models.evaluate:main"
run-api = "tech_challenge.api.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S105", "S106"]
